; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/x86emu/extr_x86emu.c_dec_byte.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/x86emu/extr_x86emu.c_dec_byte.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.x86emu = type { i32 }

@F_SF = common dso_local global i32 0, align 4
@F_ZF = common dso_local global i32 0, align 4
@F_PF = common dso_local global i32 0, align 4
@F_OF = common dso_local global i32 0, align 4
@F_AF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.x86emu*, i32)* @dec_byte to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dec_byte(%struct.x86emu* %0, i32 %1) #0 {
  %3 = alloca %struct.x86emu*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.x86emu* %0, %struct.x86emu** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  %8 = sub nsw i32 %7, 1
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* %5, align 4
  %10 = and i32 %9, 128
  %11 = load i32, i32* @F_SF, align 4
  %12 = call i32 @CONDITIONAL_SET_FLAG(i32 %10, i32 %11)
  %13 = load i32, i32* %5, align 4
  %14 = and i32 %13, 255
  %15 = icmp eq i32 %14, 0
  %16 = zext i1 %15 to i32
  %17 = load i32, i32* @F_ZF, align 4
  %18 = call i32 @CONDITIONAL_SET_FLAG(i32 %16, i32 %17)
  %19 = load i32, i32* %5, align 4
  %20 = and i32 %19, 255
  %21 = call i32 @PARITY(i32 %20)
  %22 = load i32, i32* @F_PF, align 4
  %23 = call i32 @CONDITIONAL_SET_FLAG(i32 %21, i32 %22)
  %24 = load i32, i32* %5, align 4
  %25 = load i32, i32* %4, align 4
  %26 = xor i32 %25, -1
  %27 = or i32 %26, 1
  %28 = and i32 %24, %27
  %29 = load i32, i32* %4, align 4
  %30 = xor i32 %29, -1
  %31 = and i32 %30, 1
  %32 = or i32 %28, %31
  store i32 %32, i32* %6, align 4
  %33 = load i32, i32* %6, align 4
  %34 = ashr i32 %33, 6
  %35 = call i32 @XOR2(i32 %34)
  %36 = load i32, i32* @F_OF, align 4
  %37 = call i32 @CONDITIONAL_SET_FLAG(i32 %35, i32 %36)
  %38 = load i32, i32* %6, align 4
  %39 = and i32 %38, 8
  %40 = load i32, i32* @F_AF, align 4
  %41 = call i32 @CONDITIONAL_SET_FLAG(i32 %39, i32 %40)
  %42 = load i32, i32* %5, align 4
  ret i32 %42
}

declare dso_local i32 @CONDITIONAL_SET_FLAG(i32, i32) #1

declare dso_local i32 @PARITY(i32) #1

declare dso_local i32 @XOR2(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
